--- a/examples/lian/index.html
+++ b/examples/lian/index.html
@@ -22,7 +22,7 @@
 				<div class="navbar__dropdown">
 					<span class="fas fa-bars navbar__menu-button"></span>
 					<div class="navbar__phone-menu">
-						<a href="#" class="navbar__menu-item">home</a>
+						<a href="https://vkhalikov.github.io" class="navbar__menu-item">home</a>
 						<a href="#" class="navbar__menu-item">about</a>
 						<a href="#" class="navbar__menu-item">portfolio</a>
 						<a href="#" class="navbar__menu-item">blog</a>
