Section adding and fixes
Portfolio section edited;
Footer and Contact/Modal sections added;
Cards animation edited.

--- a/examples/dartServiceManager/index.html
+++ b/examples/dartServiceManager/index.html
@@ -58,8 +58,8 @@ laboris nisi ut aliquip ex ea commodo consequat.</p>
 		        	</form>
 		     	</div>
 		      	<div class="modal-footer justify-content-around">
+		      		<button type="button" class="btn button-styled button-section">Sign up</button>
 		        	<button type="button" class="btn button-styled button-header" data-dismiss="modal">Close</button>
-		        	<button type="button" class="btn button-styled button-section">Sign up</button>
 		      	</div>
 		    </div>
 		  </div>
@@ -354,6 +354,10 @@ laboris nisi ut aliquip ex ea commodo consequat.</p>
 		</div>
 	</footer>
 	<!-- Footer Section END -->
+
+	<!-- Return button -->
+	<a href="https://vkhalikov.github.io" class="btn-return">return <i class="fas fa-undo-alt"></i></a>
+
 	<!-- BOOTSTRAP JS SOURCES -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
