--- a/examples/lian/index.html
+++ b/examples/lian/index.html
@@ -82,5 +82,8 @@
 		<div class="footer__copyright">
 			© 2016 <span class="highlighted">Mulitix Theme</span> by ThemeForces. All Rights Reserved.
 		</div>
+		
+	<!-- Return button -->
+	<a href="https://vkhalikov.github.io" class="btn-return">return <i class="fas fa-undo-alt"></i></a>
 </body>
 </html>
