--- a/index.html
+++ b/index.html
@@ -3,16 +3,37 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Primary Meta Tags -->
+	<title>Vadim Khalikov. Portfolio</title>
+	<meta name="title" content="Vadim Khalikov. Portfolio">
+	<meta name="description" content="Hello there! I'm a front-end developer and here you can take a look on my projects, just go to the example section. There is also a little information about me.  Want to hire me?  Not a problem! Just contact me via contact section.">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://vkhalikov.github.io/">
+	<meta property="og:title" content="Vadim Khalikov. Portfolio">
+	<meta property="og:description" content="Hello there! I'm a front-end developer and here you can take a look on my projects, just go to the example section. There is also a little information about me.  Want to hire me?  Not a problem! Just contact me via contact section.">
+	<meta property="og:image" content="example.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://vkhalikov.github.io/">
+	<meta property="twitter:title" content="Vadim Khalikov. Portfolio">
+	<meta property="twitter:description" content="Hello there! I'm a front-end developer and here you can take a look on my projects, just go to the example section. There is also a little information about me.  Want to hire me?  Not a problem! Just contact me via contact section.">
+	<meta property="twitter:image" content="example.png">
+
+	<!-- Links -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Arimo:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,600,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.2/dist/jquery.fancybox.min.css" />
-	<title>Portfolio</title>
+	<link rel="stylesheet" href="css/aos.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.2/dist/jquery.fancybox.min.css"/>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="0">
-	<nav class="navbar sticky-top shadow-sm navbar-expand-sm">
+	<!-- NAV SECTION -->
+	<nav class="navbar sticky-top shadow navbar-expand-sm">
 		<div class="container-fluid wrapper my-2">
 			<a href="#home__anchor" class="navbar-brand"><img src="img/khalikovWebdev_logo.png" alt="Logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-toggler-button">
@@ -23,7 +44,7 @@
 						<li class="nav-item"><a href="#home__anchor" class="nav-link px-lg-4">home</a></li>
 						<li class="nav-item"><a href="#examples__anchor" class="nav-link px-lg-4">examples</a></li>
 						<li class="nav-item"><a href="#about__anchor" class="nav-link px-lg-4">about me</a></li>
-						<li class="nav-item"><a href="#contact__anchor" class="nav-link px-lg-4">contact me</a></li>
+						<li class="nav-item"><a href="#contact__modal" data-toggle="modal" class="nav-link px-lg-4">contact me</a></li>
 						<li class="nav-item"><a href="https://github.com/vkhalikov" class="nav-link social-icon"><i class="fab fa-github-square"></i></a></li>
 						<li class="nav-item"><a href="https://vk.com/ashon" class="nav-link social-icon"><i class="fab fa-vk"></i></a></li>
 						<li class="nav-item"><a href="https://www.facebook.com/vkhalikov" class="nav-link social-icon"><i class="fab fa-facebook"></i></a></li>
@@ -31,23 +52,53 @@
 				</div>
 		</div>
 	</nav>
+
+	<!-- HEADER SECTION -->
 	<header class="header py-3 py-sm-5 text-center" id="home__anchor">
 		<div class="container-fluid wrapper mx-auto d-flex flex-column justify-content-around align-items-center">
 			<h1 class="h1 text-uppercase mb-4">welcome to my portfolio</h1>
 			<h3 class="h3 text-uppercase">go to the section below to see the examples of my work</h3>
 			<div class="row">
 				<div class="col-md-6 pt-3"><a href="#examples__anchor" class="btn shadow">find out more</a></div>
-				<div class="col-md-6 pt-3"><a href="#contact__anchor" class="btn shadow button-secondary">contact me</a></div>
+				<div class="col-md-6 pt-3"><a href="#contact__modal" data-toggle="modal" class="btn shadow button-secondary">contact me</a></div>
 			</div>
 		</div>
 	</header>
+
+	<!-- CONTACT SECTION/MODAL WINDOW -->
+	<div class="modal fade" tabindex="-1" id="contact__modal">
+		<div class="modal-dialog">
+		   	<div class="modal-content">
+		      	<div class="modal-header">
+		        	<h5 class="modal-title">Contact Me</h5>
+		       		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		         	<span>&times;</span>
+		        	</button>
+		      	</div>
+		      	<div class="modal-body">
+		        	<h4 class="resume__personal-title">Phone</h4>
+					<p>+7 (965) 019-69-14</p>
+					<h4 class="resume__personal-title">E-mail</h4>
+					<p>vkhalikov.work@gmail.com</p>
+					<h4 class="resume__personal-title"><i class="fab fa-vk"></i></h4>
+					<a href="https://vk.com/ashon" class="resume__link"><p>vk.com/ashon</p></a>
+		     	</div>
+		      	<div class="modal-footer justify-content-around">
+		        	<button type="button" class="btn btn-block" data-dismiss="modal">Close</button>
+		      	</div>
+		    </div>
+		</div>
+	</div>
+
+	<!-- EXAMPLES SECTION -->
 	<section class="examples py-4" id="examples__anchor">
 		<div class="container-fluid wrapper mx-auto">
 			<h2 class="h2 text-center text-uppercase">examples</h2>
 			<h4 class="h5 text-center  mt-3">Click on the image to see a full version, or go directly to a website by pressing a button</h4>
+			<!-- CARDS -->
 			<div class="row py-4 justify-content-around align-items-center">
 				<div class="col-sm-6 col-lg-4">
-					<div class="card">
+					<div data-aos="flip-up" data-aos-duration="700" data-aos-offset="100" class="card">
 							<div class="card__container_img card-wip"><i class="fas fa-wrench img__icon-wip"></i></div>
 						  	<div class="card-body">
 						    	<h5 class="card-title">WIP</h5>
@@ -57,7 +108,7 @@
 					</div>
 				</div>
 				<div class="col-sm-6 col-lg-4">
-					<div class="card">
+					<div data-aos="flip-up" data-aos-duration="700" data-aos-offset="100" class="card">
 						<div class="card__container_img">
 							<a class="card__img" data-fancybox="gallery" href="examples/dartServiceManager/example.png"><img class="img-fluid" src="examples/dartServiceManager/example_min.png" alt="dartServiceManager">
 							<i class="fas fa-search-plus img__icon-zoom"></i></a>
@@ -70,7 +121,7 @@
 					</div>
 				</div>
 				<div class="col-sm-6 col-lg-4">
-					<div class="card">
+					<div data-aos="flip-up" data-aos-duration="700" data-aos-offset="100" class="card">
 						<div class="card__container_img">
 							<a class="card__img" data-fancybox="gallery" href="examples/lian/example.png"><img class="img-fluid" src="examples/lian/example_min.png" alt="Lian"><i class="fas fa-search-plus img__icon-zoom"></i></a>
 						</div>
@@ -84,25 +135,29 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- RESUME SECTION -->
 	<section class="resume" id="about__anchor">
-		<div class="wrapper py-4 mx-auto container-fluid ">
-			<h1 class="resume__name"><span class="first-name">vadim</span> khalikov</h1>
+		<div class="wrapper mx-auto container-fluid ">
+			<h2 class="resume__name"><span class="first-name">vadim</span> khalikov</h2>
 			<h2 class="resume__spec">front end developer</h2>
 			<p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, neque, delectus. Animi mollitia ullam tempore repellat veniam, excepturi vero vel et tempora modi fugiat! Aperiam, libero, modi! Numquam cumque, dicta.</p>
 			<div class="row">
+
+				<!-- Side -->
 				<div class="col-sm-4 py-3">
 					<h3 class="resume__title"><i class="fas fa-user-circle"></i> personal info</h3>
 						<div>
 							<h4 class="resume__personal-title">City</h4>
-							<p class="">Saint-Petersburg, Russia</p>
+							<p>Saint-Petersburg, Russia</p>
 							<h4 class="resume__personal-title">Phone</h4>
-							<p class="">+7 (965) 019-69-14</p>
+							<p>+7 (965) 019-69-14</p>
 							<h4 class="resume__personal-title">E-mail</h4>
-							<p class="">vkhalikov.work@gmail.com</p>
+							<p>vkhalikov.work@gmail.com</p>
 							<h4 class="resume__personal-title">Github</h4>
 							<a href="https://github.com/vkhalikov" class="resume__link"><p class="">github.com/vkhalikov</p></a>
 							<h4 class="resume__personal-title">VK</h4>
-							<a href="https://vk.com/ashon" class="resume__link"><p class="">vk.com/ashon</p></a>
+							<a href="https://vk.com/ashon" class="resume__link"><p>vk.com/ashon</p></a>
 						</div>
 					<h3 class="resume__title"><i class="fas fa-globe-americas"></i> languages</h3>
 						<div>
@@ -118,39 +173,102 @@
 							<div class="progress-label">upper-intermediate</div>
 						</div>
 				</div>
+
+				<!-- Main -->
 				<div class="col-sm-8 py-3">
+
+					<!-- Skills -->
 					<h3 class="resume__title"><i class="fas fa-wrench"></i> Skills</h3>
-					<div class="row">
-						<div class="col-5 col-md-3">
-							<h5 class="resume__personal-title">HTML5 <i class="fab fa-html5 font-weight-normal"></i></h5>
-						</div>
-						<div class="col-7 col-md-3">
-							<div class="skill-level">
-								<div></div>
-								<div></div>
-								<div></div>
-								<div></div>
-								<div class="skill-false"></div>
+					<div class="row mb-3">
+						<div class="col-4">
+							<h5 class="resume__personal-title">HTML5 <i class="fab fa-html5 font-weight-normal"></i>
+							</h5>
+							<div class="skill">
+								<div class="skill-level">
+									<div></div>
+									<div></div>
+									<div></div>
+									<div></div>
+									<div class="skill-false"></div>
+								</div>
+								<p class="skill-label">advanced</p>
 							</div>
-							<p class="skill-label">advanced</p>
 						</div>
-						<div class="col-7 col-md-3">
+						<div class="col-4">
 							<h5 class="resume__personal-title">CSS3 <i class="fab fa-css3-alt font-weight-normal"></i></h5>
-						</div>
-						<div class="col-7 col-md-3">
-							<div class="skill-level">
-								<div></div>
-								<div></div>
-								<div></div>
-								<div></div>
-								<div class="skill-false"></div>
+							<div class="skill">
+								<div class="skill-level">
+									<div></div>
+									<div></div>
+									<div></div>
+									<div></div>
+									<div class="skill-false"></div>
+								</div>
+								<p class="skill-label">advanced</p>
 							</div>
-							<p class="skill-label">advanced</p>
+						</div>
+						<div class="col-4">
+							<h5 class="resume__personal-title">JS <i class="fab fa-js font-weight-normal"></i></h5>
+							<div class="skill">
+								<div class="skill-level">
+									<div></div>
+									<div></div>
+									<div></div>
+									<div class="skill-false"></div>
+									<div class="skill-false"></div>
+								</div>
+								<p class="skill-label">middle</p>
+							</div>
 						</div>
 					</div>
-					<h3 class="resume__title"><i class="fas fa-graduation-cap mr-3"></i> Education</h3>
+
+					<!-- Extra Skills -->
+					<h3 class="resume__title"><i class="fas fa-puzzle-piece"></i> Extra skills</h3>
+					<div class="row mb-3">
+						<div class="col-4">
+							<h5 class="resume__personal-title">Bootstrap</h5>
+							<div class="skill">
+								<div class="skill-level">
+									<div></div>
+									<div></div>
+									<div></div>
+									<div></div>
+									<div class="skill-false"></div>
+								</div>
+								<p class="skill-label">advanced</p>
+							</div>
+						</div>
+						<div class="col-4">
+							<h5 class="resume__personal-title">SASS <i class="fab fa-sass font-weight-normal"></i></h5>
+							<div class="skill">
+								<div class="skill-level">
+									<div></div>
+									<div></div>
+									<div></div>
+									<div></div>
+									<div class="skill-false"></div>
+								</div>
+								<p class="skill-label">advanced</p>
+							</div>
+						</div>
+						<div class="col-4">
+							<h5 class="resume__personal-title">git <i class="fab fa-git font-weight-normal"></i></h5>
+							<div class="skill">
+								<div class="skill-level">
+									<div></div>
+									<div></div>
+									<div class="skill-false"></div>
+									<div class="skill-false"></div>
+									<div class="skill-false"></div>
+								</div>
+								<p class="skill-label">basic</p>
+							</div>
+						</div>
+					</div>
+					<!-- Education -->
+					<h3 class="resume__title"><i class="fas fa-graduation-cap"></i> Education</h3>
 					<div class="row">
-						<div class="col-md-2"></span>
+						<div class="col-md-2">
 							<span class="resume__date">2013-09 -</span>
 							<span class="resume__date">2017-06</span>
 						</div>
@@ -175,12 +293,19 @@
 							</ul>
 						</div>
 					</div>
+					<a href="#contact__modal" data-toggle="modal" class="btn btn-block button-animate shadow">hire me <i class="fas fa-angle-double-up"></i></a>
 				</div>
 			</div>
 		</div>
 	</section>
-
+	<footer class="footer">
+		<div class="wrapper container-fluid mx-auto py-4">
+			<p class="copyright">Developed By Vadim Khalikov vkhalikov.work@gmail.com</p>
+		</div>
+	</footer>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="js/aos.js"></script>
+	<script>AOS.init();</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.2/dist/jquery.fancybox.min.js"></script>
