fixed a bug with img extension

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				<div class="col-sm-6 col-lg-4">
 					<div data-aos="flip-up" data-aos-duration="700" data-aos-offset="100" class="card shadow">
 						<div class="card__container_img">
-							<a class="card__img" data-fancybox="gallery" href="img/command-helper.png"><img class="img-fluid" src="img/command-helper.png" alt="command-helper"><i class="fas fa-search-plus img__icon-zoom"></i></a>
+							<a class="card__img" data-fancybox="gallery" href="img/command-helper.PNG"><img class="img-fluid" src="img/command-helper.PNG" alt="command-helper"><i class="fas fa-search-plus img__icon-zoom"></i></a>
 						</div>
 						  	<div class="card-body">
 						    	<h5 class="card-title ">Command Helper</h5>
